Closed Bug 405481 Opened 17 years ago Closed 17 years ago

nsISerializable missing from nsNSSCertificate's QI impl

Categories

(Core :: Security: PSM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Biesinger, Assigned: Biesinger)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch (obsolete) — Splinter Review
see bug 388128 comment 21
Attachment #290260 - Flags: superreview?(bzbarsky)
Attachment #290260 - Flags: review?(bzbarsky)
Comment on attachment 290260 [details] [diff] [review]
patch

Add nsISerializable too, and r+sr=bzbarsky
Attachment #290260 - Flags: superreview?(bzbarsky)
Attachment #290260 - Flags: superreview+
Attachment #290260 - Flags: review?(bzbarsky)
Attachment #290260 - Flags: review+
Attached patch final patchSplinter Review
Fixes an oversight from bug 388128 and is needed for the code there and in bug 369566 to actually work. low risk.
Attachment #290260 - Attachment is obsolete: true
Attachment #290266 - Flags: approval1.9?
(and will also be needed for bug 262116)
Comment on attachment 290266 [details] [diff] [review]
final patch

a=beltzner for drivers
Attachment #290266 - Flags: approval1.9? → approval1.9+
Checking in security/manager/ssl/src/nsNSSCertificate.cpp;
/cvsroot/mozilla/security/manager/ssl/src/nsNSSCertificate.cpp,v  <--  nsNSSCertificate.cpp
new revision: 1.135; previous revision: 1.134
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: