bug 405481 add nsISerializable and nsIClassInfo to nsNSSCertificate's QI impl r+sr=bz a=beltzner